[ADBDEV-6069] - [PXF] Upgrading Spring Boot to version 3.3.2 - Upgrade to spring 3.2.3 - Upgrade to gradle 8.9 - Change metric collection